# Game-World-Backend

./: .env.example  .gitignore  API.md  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yml  render.yaml
db/: README.md  game_world.sql  seed_data.sql
db/migrations/: 001_drop_persona_genero_fecha.sql  002_timestamptz.sql  003_drop_persona_table.sql  004_optional_nombre_apellido.sql
scripts/: migrate-db.sh  reset-db.sh  run-bruno.sh  setup.sh  test-api.sh
src/: lib.rs  main.rs
src/auth/: mod.rs
src/config/: mod.rs
src/db/: mod.rs
src/error/: mod.rs
src/handlers/: auth.rs  catalogo.rs  health.rs  igdb.rs  imagen.rs  mod.rs  videojuego.rs
src/models/: catalogo.rs  mod.rs  opinion.rs  pagination.rs  usuario.rs  videojuego.rs
src/routes/: mod.rs
src/services/: auth.rs  catalogo.rs  cloudinary.rs  igdb.rs  mod.rs  opinion.rs  videojuego.rs
