[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "migrate",
    "chrono",
] }
dotenvy = "0.15.7"
bcrypt = "0.19.1"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
chrono = { version = "0.4.44", features = ["serde"] }

[build-dependencies]
dotenvy = "0.15.7"
