[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
actix-cors = "0.7.1"
actix-multipart = "0.7.2"
futures-util = "0.3.32"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
    "chrono",
] }
dotenvy = "0.15.7"
bcrypt = "0.19.1"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
chrono = { version = "0.4.44", features = ["serde"] }
reqwest = { version = "0.12.23", default-features = false, features = [
    "multipart",
    "json",
    "rustls-tls",
] }

[build-dependencies]
dotenvy = "0.15.7"
